20/05/06,update Reference&OOM